--- a/ux.html
+++ b/ux.html
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/oSnrbfwB'>Splunk Careers - Principal UX Designer, Applications</a></h5> 
+<h5><a href='https://jobs.jobvite.com/splunk/job/oSnrbfwB'>Splunk Careers - Principal UX Designer, Applications</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -133,7 +133,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/worldfirst/job/oDsobfwo'>WorldFirst Careers - UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/worldfirst/job/oDsobfwo'>WorldFirst Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -141,7 +141,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ashcompanies/job/oBT2afwq'>American Specialty Health, Inc. Careers - UX Designer II</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ashcompanies/job/oBT2afwq'>American Specialty Health, Inc. Careers - UX Designer II</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -149,7 +149,7 @@
 <p><span class="badge badge-light">Oslo, Norway  Oslo, Norway Houston, TXPalo Alto, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471293-ux-designer'>McFadyen Digital UX Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471293-ux-designer'>McFadyen Digital UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kerala, India  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -229,7 +229,7 @@
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nstar-financial/job/opDrbfwo'>Orion Advisor Solutions Careers - UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nstar-financial/job/opDrbfwo'>Orion Advisor Solutions Careers - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">Omaha, Nebraska</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -331,7 +331,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coachhub.join.com/jobs/457886-ux-writer-product-content-writer-m-f-d-in-startup-in-berlin'>Job @ Coachhub (Berlin): UX Writer / Product Conte... | JOIN</a></h5> 
+<h5><a href='https://coachhub.join.com/jobs/457886-ux-writer-product-content-writer-m-f-d-in-startup-in-berlin'>Job @ Coachhub (Berlin): UX Writer / Product Conte... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin  Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
